# openenv-email-triage

./: Dockerfile  README.md  app.py  baseline.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  email_triage_env.py
server/: app.py
