[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-openenv"
version = "1.0.0"
description = "Email Triage OpenEnv environment for AI agent training"
requires-python = ">=3.10"

[tool.openenv]
entry_point = "app:app"
tasks = [
    "task_1_spam_detection",
    "task_2_priority_triage",
    "task_3_reply_drafting"
]
